[package]
name = "tekken_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
dotenv = "0.15"
rusqlite="0.30"
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"
