[package]
name = "tekken_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
dotenv = "0.15"
rusqlite="0.30"
once_cell = "1.18.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
mockito = "1.4.0"
approx = "0.5"
